@@ -11,7 +11,7 @@ lint_off -rule CASEINCOMPLETE -file "t/t_vlt_warn.v"
 lint_off -rule WIDTH          -file "t/t_vlt_warn.v" -lines 19
 lint_off -rule DECLFILENAME   -file "*/t_vlt_warn.v"
 // Test wildcard filenames
-lint_off -msg WIDTH           -file "*/t_vlt_warn.v" -lines 20-20
+lint_off -rule WIDTH          -file "*/t_vlt_warn.v" -lines 20-20
 // Test global disables
 lint_off                      -file "*/t_vlt_warn.v" -lines 21-21
 // Test match
