@@ -13,6 +13,7 @@ Verilator 4.219 devel
 
 **Minor:**
 
+* Removed the deprecated lint_off flag -msg; use -rule instead.
 
 
 Verilator 4.218 2022-01-17
